<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpcomingNotifications">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout android:id="@+id/group_55"
        android:layout_margin="10dp"
        android:layout_marginStart="27dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_19_ek1_shape">


        <LinearLayout
            android:id="@+id/group_36_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="9dp">

            <View
                android:id="@+id/ellipse_25_ek1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ellipse_25_ek1_shape" />

            <TextView android:id="@+id/by__john"
                android:fontFamily="Inter"
                android:textSize="12sp"
                android:textColor="@color/rectangle_3_color"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/by__john_string"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/group_34_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="23dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/group_36_ek1">

            <TextView android:id="@+id/web_design_and_development_ek1"
                android:fontFamily="Inter"
                android:textSize="15sp"
                android:textColor="@color/rectangle_2_color"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:text="@string/web_design_and_development_ek1_string"
                />

            <TextView android:id="@+id/_07_00___09_00"
                android:fontFamily="Inter"
                android:textSize="15sp"
                android:textColor="@color/rectangle_2_color"
                android:layout_marginLeft="0dp"
                android:layout_width="178dp"
                android:layout_height="23dp"
                android:layout_marginTop="10dp"
                android:text="@string/_07_00___09_00_string" />

            <LinearLayout
                android:id="@+id/group_33"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/alarm"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"
                    android:src="@drawable/alarm_01"
                    />

                <TextView android:id="@+id/_06_00"
                    android:fontFamily="Inter"
                    android:textSize="15sp"
                    android:textColor="@color/rectangle_2_color"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_alignStart="@+id/alarm"
                    android:text="@string/_06_00_string"
                    />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/group_34_ek1"
            android:src="@drawable/icon_alarm_check" />
        <!--			</RelativeLayout>-->
    </RelativeLayout>


    <RelativeLayout android:id="@+id/group_38"
        android:layout_margin="10dp"
        android:layout_marginStart="27dp"
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_19_shape"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/group_36"
            android:layout_marginTop="9dp"
            android:orientation="vertical"
            android:layout_marginStart="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View   android:id="@+id/ellipse_25"
                android:background="@drawable/ellipse_25_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView android:id="@+id/by__emily"
                android:fontFamily="Inter"
                android:textSize="12sp"
                android:textColor="@color/rectangle_3_color"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/by__emily_string"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/absent_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="23dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/group_36">

            <TextView
                android:id="@+id/web_design_and_development"
                android:layout_width="199dp"
                android:layout_height="23dp"
                android:layout_marginTop="0dp"
                android:fontFamily="Inter"
                android:text="@string/web_design_and_development_string"
                android:textColor="@color/rectangle_2_color"
                android:textSize="15sp" />
            <TextView android:id="@+id/_09_00___11_00"
                android:fontFamily="Inter"
                android:textSize="15sp"
                android:textColor="@color/rectangle_2_color"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_width="178dp"
                android:layout_height="23dp"
                android:text="@string/_09_00___11_00_string"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/absent_session"
            android:src="@drawable/icon_alarm_check_red" />
    </RelativeLayout>
</LinearLayout>